--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h2>Currency Conveter</h2>
 
-        <from>
+        <form>
             <div class="amount">
                 <p>Enter Amount</p>
                 <input value="100" type="text" />
@@ -36,7 +36,7 @@
                 </div>
 
                 <i class="fa-solid fa-arrow-right-arrow-left"></i>
-                
+
                 <div class="to">
                     <p>To</p>
                     <div class="select-container">
@@ -52,9 +52,9 @@
             </div>
             <div class="msg">1 NRS = 100 KRW</div>
             <button>Get Exchnage Rate</button>
-        </from>
+        </form>
     </div>
-
+    <script src="code.js"></script>
     <script src="app.js"></script>
 </body>
 
