currency code listed

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                     <div class="select-container">
                         <img src="https://flagsapi.com/NP/flat/64.png">
                         <select name="from">
-                            <option value="NRS" selected>NRS</option>
-                            <option value="USD">USD</option>
-                            <option value="KRW">KRW</option>
+                            
                         </select>
                     </div>
                 </div>
@@ -41,10 +39,8 @@
                     <p>To</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/KR/flat/64.png">
-                        <select name="from">
-                            <option value="KRW">KRW</option>
-                            <option value="NRS">NRS</option>
-                            <option value="USD">USD</option>
+                        <select name="to">
+                            
 
                         </select>
                     </div>
