--- a/index.html
+++ b/index.html
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>currency converter</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Currency Converter</title>
     <link href="style.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-</head>
-
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <div class="container">
-        <h2>Currency Conveter</h2>
-
-        <form>
-            <div class="amount">
-                <p>Enter Amount</p>
-                <input value="100" type="text" />
+      <h2>Currency Converter</h2>
+      <form>
+        <div class="amount">
+          <p>Enter Amount</p>
+          <br>
+          <input value="1" type="text" />
+        </div>
+        <div class="dropdown">
+          <div class="from">
+            <p>From</p>
+            <div class="select-container">
+              <img src="https://flagsapi.com/NP/flat/64.png" />
+              <select name="from"></select>
             </div>
-            <div class="dropdown">
-                <div class="from">
-                    <p>From</p>
-                    <div class="select-container">
-                        <img src="https://flagsapi.com/NP/flat/64.png">
-                        <select name="from">
-                            
-                        </select>
-                    </div>
-                </div>
-
-                <i class="fa-solid fa-arrow-right-arrow-left"></i>
-
-                <div class="to">
-                    <p>To</p>
-                    <div class="select-container">
-                        <img src="https://flagsapi.com/KR/flat/64.png">
-                        <select name="to">
-                            
-
-                        </select>
-                    </div>
-                </div>
+          </div>
+          <i class="fa-solid fa-arrow-right-arrow-left"></i>
+          <div class="to">
+            <p>To</p>
+            <div class="select-container">
+              <img src="https://flagsapi.com/KR/flat/64.png" />
+              <select name="to"></select>
             </div>
-            <div class="msg">1 NRS = 100 KRW</div>
-            <button>Get Exchnage Rate</button>
-        </form>
+          </div>
+        </div>
+        <div class="msg">1USD = 100 NPR</div>
+        <button>Get Exchange Rate</button>
+      </form>
     </div>
-    <script src="code.js"></script>
+    <script src="codes.js"></script>
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
